Bug 73484 - Gridline visibility on the last sheet is not imported from XLS
Summary: Gridline visibility on the last sheet is not imported from XLS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.1 rc
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.1 target:4.1.5
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-10 20:18 UTC by Kohei Yoshida
Modified: 2014-01-11 17:31 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
test document (13.50 KB, application/vnd.ms-excel)
2014-01-10 20:18 UTC, Kohei Yoshida
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2014-01-10 20:18:03 UTC
Created attachment 91841 [details]
test document

1. Open the attached Excel file.
2. Take a look at Sheet3.
3. The grid lines are shown, but they should be hidden.

The document has 3 sheets, and on all of these sheets the grid lines are not shown.  We just fail to import that correctly for the last sheet.
Comment 1 Commit Notification 2014-01-10 20:22:01 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3e87471b6815a3cad48cab2ef81073bad5453c56

fdo#73484: Ensure that we import all tab settings from Excel.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2014-01-11 16:02:23 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=697005cdb9adb375afb499beca68246251713578&h=libreoffice-4-2

fdo#73484: Ensure that we import all tab settings from Excel.


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-01-11 16:03:56 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5363d7b89d9b7732ba7f3d9bc04008bdc29fefd0&h=libreoffice-4-1

fdo#73484: Ensure that we import all tab settings from Excel.


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Kohei Yoshida 2014-01-11 16:08:15 UTC
Fixed now.