fdo#73484: Ensure that we import all tab settings from Excel.

The old code would not import settings of the last sheet if maTabData was
not large enough before the loop begins. Enlarge maTabData ahead of time
to ensure we load all tab settings.

(cherry picked from commit 3e87471b6815a3cad48cab2ef81073bad5453c56)

Conflicts:
	sc/inc/scextopt.hxx

Change-Id: I9093a93ef26ccba9fef06a8929d1d86311f5c55d